fixed gradient, light/dark mode finished

--- a/src/components/LoginPages/EntryPageStyle.css
+++ b/src/components/LoginPages/EntryPageStyle.css
@@ -26,7 +26,7 @@
   --success-color: #4ade80;
   --warning-color: #facc15;
   --danger-color: #f87171;
-  --light-bg: #1f2937;
+  --light-bg: #03123B;
   --card-bg: #374151;
   --text-primary: #f9fafb;
   --text-secondary: #d1d5db;
@@ -113,9 +113,14 @@
 
 /* https://stackoverflow.com/questions/23935758/gradient-over-img-tag-using-css */
 img {
+  left: 0;
+  width: 100%; 
+  height: 100%;
   /* background: linear gradient (to right, white, black); */
-   mask-image: linear-gradient(to right, black, transparent );
-   -webkit-mask-image: linear-gradient(to right, black, transparent );
+  /* mask-image: linear-gradient(to right, black, transparent );
+  -webkit-mask-image: linear-gradient(to right, black, transparent ); */
+  mask-image: linear-gradient(to left, transparent , rgba(31, 41, 55, 1) 100%);
+  -webkit-mask-image: linear-gradient(to left , transparent ,  rgba(31, 41, 55, 1) 100%);
 }
 
 
